<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share_email"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share_email"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tags"
        android:title="@string/action_tags"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reprocess"
        android:title="@string/action_reprocess"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
